cluster/app-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: simple-go
spec:
  replicas: 2
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: simple-go
    spec:
      containers:
        - name: simple-go
          image: "miloofcroton/simple-go:1.0.3"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
