cluster/app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-go-pod
  labels:
    language: go
    env: test
spec:
  containers:
  - name: simple-go
    image: miloofcroton/simple-go:1.0.3
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
        protocol: TCP
