cluster/app-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-go
  labels:
    app: simple-go
spec:
  # use NodePort here to be able to access the port on each node
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: simple-go
